# wayland-color-picker

./: .gitignore  CMakeLists.txt  colorPicker  color_history.c  color_history.h  main.c  resources.c  resources.gresource.xml  structs.h  styles.css
.cache/clangd/index/: color_history.c.32CAEDC8ECE86E23.idx  color_history.h.1B9D5B5B1987867C.idx  main.c.AAC61723C0EE18E5.idx  structs.h.57BA207B93965F6F.idx
ui/: help.ui  init.ui
